[gd_scene load_steps=2 format=3 uid="uid://bq085jnfkwvmf"]

[ext_resource type="Script" uid="uid://74fc4l6l4j3l" path="res://ui/InventoryPanel.gd" id="1"]

[node name="InventoryPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="PanelContainer" parent="VBox"]
layout_mode = 2

[node name="HeaderVBox" type="VBoxContainer" parent="VBox/Header"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/Header/HeaderVBox"]
layout_mode = 2
text = "INVENTORY"
horizontal_alignment = 1

[node name="SearchBar" type="HBoxContainer" parent="VBox/Header/HeaderVBox"]
layout_mode = 2

[node name="SearchInput" type="LineEdit" parent="VBox/Header/HeaderVBox/SearchBar"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search..."

[node name="CategoryOption" type="OptionButton" parent="VBox/Header/HeaderVBox/SearchBar"]
layout_mode = 2

[node name="SortButton" type="Button" parent="VBox/Header/HeaderVBox/SearchBar"]
layout_mode = 2
text = "Sort"

[node name="Content" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsSidebar" type="PanelContainer" parent="VBox/Content"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="StatsVBox" type="VBoxContainer" parent="VBox/Content/StatsSidebar"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="VBox/Content/StatsSidebar/StatsVBox"]
layout_mode = 2
text = "STATS"
horizontal_alignment = 1

[node name="HPLabel" type="Label" parent="VBox/Content/StatsSidebar/StatsVBox"]
layout_mode = 2
text = "HP: 100"

[node name="MPLabel" type="Label" parent="VBox/Content/StatsSidebar/StatsVBox"]
layout_mode = 2
text = "MP: 50"

[node name="STRLabel" type="Label" parent="VBox/Content/StatsSidebar/StatsVBox"]
layout_mode = 2
text = "STR: 15"

[node name="DEXLabel" type="Label" parent="VBox/Content/StatsSidebar/StatsVBox"]
layout_mode = 2
text = "DEX: 12"

[node name="INTLabel" type="Label" parent="VBox/Content/StatsSidebar/StatsVBox"]
layout_mode = 2
text = "INT: 18"

[node name="ItemScroll" type="ScrollContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemGrid" type="GridContainer" parent="VBox/Content/ItemScroll"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Footer" type="PanelContainer" parent="VBox"]
layout_mode = 2

[node name="FooterVBox" type="VBoxContainer" parent="VBox/Footer"]
layout_mode = 2

[node name="WeightBar" type="HBoxContainer" parent="VBox/Footer/FooterVBox"]
layout_mode = 2

[node name="WeightTitle" type="Label" parent="VBox/Footer/FooterVBox/WeightBar"]
layout_mode = 2
text = "Weight:"

[node name="ProgressBar" type="ProgressBar" parent="VBox/Footer/FooterVBox/WeightBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 60.0
show_percentage = false

[node name="WeightLabel" type="Label" parent="VBox/Footer/FooterVBox/WeightBar"]
layout_mode = 2
text = "15/25 kg"

[node name="ActionButtons" type="HBoxContainer" parent="VBox/Footer/FooterVBox"]
layout_mode = 2

[node name="DropButton" type="Button" parent="VBox/Footer/FooterVBox/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Drop"

[node name="UseButton" type="Button" parent="VBox/Footer/FooterVBox/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use"

[node name="InspectButton" type="Button" parent="VBox/Footer/FooterVBox/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inspect"
